--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,81 @@ body {
     font-family: 'Ubuntu', sans-serif;
     color: #FAEBD7;
 }
+
+header {
+    width: 100%;
+    margin: 20px 0 20px 00px;
+}
+
+.nombre {
+    padding-left: 40px;
+    font-weight: bold;
+}
+
+main {
+    width: 100%;
+    display: flex;
+}
+
+article {
+    width: 50%;
+    padding-left: 60px;
+    margin-top: 50px;
+}
+
+aside {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+aside img {
+    width: 400px;
+}
+
+.portfolio h2 {
+    margin-top: 100px;
+    padding-left: 60px;
+}
+
+.card-deck {
+    margin: 40px 0px 0px 0px;
+}
+
+.card {
+    background-color: #202020;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 60px;
+    justify-content: center;
+}
+
+.links_redes {
+    display: flex;
+    justify-content: center;
+}
+
+.img_redes img {
+    width: 40px;
+    margin: 15px;
+}
+
+.img_redes img:hover {
+    transform: scale(1.05);
+}
+
+.social_media h2 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+footer {
+    display: flex;
+    margin: 40px 0 40px 0;
+    justify-content: center;
+}
