SE AGREGARON ENLACES A LOS BOTONES DEL PORTFOLIO

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,12 @@ aside img {
     background-color: #202020;
 }
 
+.card a {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
 section {
     display: flex;
     flex-direction: column;
