SE CORRIGIERON DETALLES EN LA ESTRUCTURA

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ aside img {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
+    text-decoration: none;
 }
 
 section {
